# SQLDataclass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FORK.md  README.md  docker-compose.yml  entrypoint.sh  project.md  pyproject.toml  research_findings.md
.github/workflows/: ci.yml
.mypy/ignores/: explicit_any.md
linter_scripts/: common.py  test_structure_convention.py
src/sqldataclass/: __init__.py  annotations.py  basemodel.py  compat.py  cy_function_helper.py  hydration.py  model.py  query.py  registry.py  repository.py  return_types.py  utils.py  validators.py  versioning.py  write.py
src/sqldataclass/tests/integration_tests/: test_alembic.py  test_bind.py  test_inheritance.py  test_model_roundtrip.py  test_nested_relationships.py  test_pagination.py  test_per_model_bind.py  test_relationship_edge_cases.py  test_relationship_ordering.py  test_relationships.py  test_sqlite_roundtrip.py  test_update_delete.py
src/sqldataclass/tests/performance_tests/: test_comparison_benchmarks.py  test_memory_benchmarks.py  test_runtime_benchmarks.py
src/sqldataclass/tests/unit_tests/: test_annotations.py  test_basemodel.py  test_cy_function_helper.py  test_hydration.py  test_hydration_edge_cases.py  test_load_dump_clone.py  test_memory.py  test_model.py  test_model_edge_cases.py  test_query_edge_cases.py  test_registry_edge_cases.py  test_return_types.py  test_utils.py  test_validators.py  test_write_edge_cases.py
src/sqldataclass/tests/util/: memory.py
tests/cases/: jti_relationship_models.py
tests/integration_tests/: conftest.py  test_alembic.py  test_basemodel_roundtrip.py  test_collection_relationships.py  test_non_column_fields.py  test_relationships.py  test_response_model.py  test_sqlite_roundtrip.py
tests/performance_tests/: conftest.py  test_comparison_benchmarks.py  test_memory_benchmarks.py  test_new_feature_benchmarks.py  test_runtime_benchmarks.py
tests/unit_tests/: test_array_type_mapping.py  test_basemodel.py  test_compat.py  test_hydration.py  test_hydration_edge_cases.py  test_json_type_mapping.py  test_jti.py  test_jti_edges.py  test_load_dump_clone.py  test_memory.py  test_model.py  test_model_edge_cases.py  test_query_edge_cases.py  test_registry_edge_cases.py  test_repository.py  test_response_model.py  test_return_types.py  test_table_args.py  test_validators.py  test_versioning.py  test_write_edge_cases.py
