[project]
name = "sqldataclass"
version = "0.2.4"
description = "Memory-efficient ORM bridge: pydantic dataclasses + SQLAlchemy Core. FastAPI compatible."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lennart Jansen", email = "lejansen.home@gmail.com" },
]
keywords = [
    "orm",
    "pydantic",
    "sqlalchemy",
    "dataclass",
    "memory-efficient",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-timeout>=2.3",
    "diff-cover>=9.0",
    "ruff>=0.15",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "blueprint-linters>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/lejansenGitHub/SQLDataclass"
Repository = "https://github.com/lejansenGitHub/SQLDataclass"
Issues = "https://github.com/lejansenGitHub/SQLDataclass/issues"

[tool.uv]
find-links = ["vendor/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sqlmodel>=0.0.38",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqldataclass"]

[tool.hatch.build.targets.wheel.force-include]
"src/sqldataclass/py.typed" = "sqldataclass/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/sqldataclass/**/*.py",
    "src/sqldataclass/py.typed",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "B",        # flake8-bugbear
    "F",        # pyflakes
    "I",        # isort
    "PLE",      # pylint errors
    "PLC",      # pylint convention
    "PLR",      # pylint refactor
    "PLW",      # pylint warning
    "PGH",      # pygrep-hooks
    "FBT",      # flake8-boolean-trap
    "TID",      # flake8-tidy-imports
    "RSE",      # flake8-raise
    "SIM",      # flake8-simplify
    "RET",      # flake8-return
    "ISC",      # flake8-implicit-string-concat
    "COM",      # flake8-commas
    "PIE",      # flake8-pie
    "C4",       # flake8-comprehensions
    "RUF028",   # Ruff-specific rules: invalid formatter suppression
    "RUF022",   # Ruff-speficic rules: sort __all__
    "RUF100",   # Ruff-specific rules: unused-noqa
    "UP",       # pyupgrade
    "PERF",     # perflint
    "T20",      # forbid prints
    "PT",       # flake8-pytest-style
]
ignore = [
    "PT011",    # pytest-raises-too-broad
    "SIM105",   # Note that contextlib.suppress is slower than using try-except-pass directly. For performance-critical code, consider retaining the try-except-pass pattern.
    "SIM116",   # bad for coverage of the conditions
    "SIM117",   # with statements can have very different context
    "RET504",   # local assignment before return benefits labeling of the return values and debugging
    "COM812",   # missing tailing comma
    "UP008",    # super-call-with-parameters
    "UP015",    # redundant-open-modes -> writing it explicitly is more readable
    "UP035",    # deprecated imports -> should be done project wide for consistecy
    "UP044",    # breaks cython code
    "PLW1641",  # Object does not implement `__hash__` method

    # introduced in 0.15.0, require iterative activation
    "PLW0108",  # unnecessary-lambda
    "UP042",    # replace-str-enum
    "FURB110",  # if-exp-instead-of-or-operator
    "FURB171",  # single-item-membership-test
    "PLC0415",  # import not at top-level — intentional for circular import avoidance and lazy loading
    "UP046",    # Generic subclass vs type parameters — dataclass generics need Generic[] syntax
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
    "PLR2004",  # magic values in comparisons — expected in test assertions
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock.patch".msg = "Use mocker.patch() from pytest-mock instead."
"unittest.mock.patch.object".msg = "Use mocker.patch.object() from pytest-mock instead."
"pytest.MonkeyPatch".msg = "Use mocker fixture from pytest-mock instead."
"_pytest.monkeypatch.MonkeyPatch".msg = "Use mocker fixture from pytest-mock instead."
"syrupy".msg = "No snapshot testing. Assert specific fields explicitly."
"inline_snapshot".msg = "No snapshot testing. Assert specific fields explicitly."
"pytest_snapshot".msg = "No snapshot testing. Assert specific fields explicitly."

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_subclassing_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["sqldataclass.*"]
# ORM bridge requires Any for metaclass ops, SA interop, pydantic validators.
# See .mypy/ignores/explicit_any.md for full justification.
disable_error_code = ["explicit-any"]

[[tool.mypy.overrides]]
module = ["pytest.*", "alembic.*", "sqlmodel.*", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
# Relationship() fields have runtime defaults that mypy can't see through dataclass_transform
# SQLModel convenience methods are dynamically attached, causing attr-defined errors in tests
disable_error_code = ["call-arg", "arg-type", "attr-defined", "misc", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (real DB, real infrastructure)",
    "performance: performance tests (runtime + memory benchmarks)",
]
timeout = 5
timeout_method = "signal"

[tool.coverage.run]
branch = true
source = ["sqldataclass"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "# pragma: type-narrowing",
    "# pragma: protocol-stub",
    "# pragma: defensive",
    "# pragma: not-implemented",
    "if TYPE_CHECKING:",
]
